--- a/branches/imgread/Makefile
+++ b/branches/imgread/Makefile
@@ -8,7 +8,8 @@
 
 #OSMDATA = areas.osm
 OSMDATA = /opt/data/planet-070207-gb-london.osm
-#OSMDATA = test/osm5/cricklewood-5.osm
+#OSMDATA = 63240001.mp
+OSMDATA = test/osm5/cricklewood-5.osm
 #OSMDATA = london.osm
 #OSMDATA = maps/lon.mp
 #OSMDATA = --mapname=90000001 test-map:all-elements
