--- a/branches/lang/Makefile
+++ b/branches/lang/Makefile
@@ -9,19 +9,20 @@
 #OSMDATA = areas.osm
 OSMDATA = /opt/data/planet-070207-gb-london.osm
 #OSMDATA = 63240001.mp
-OSMDATA = test/osm5/cricklewood-5.osm
+#OSMDATA = test/osm5/cricklewood-5.osm
 #OSMDATA = london.osm
 #OSMDATA = maps/lon.mp
 #OSMDATA = --mapname=90000001 test-map:all-elements
 #OSMDATA = /opt/data/uk-070530.osm
 #OSMDATA = /opt/data/uk-070815.osm
-#OSMDATA = /opt/data/uk-070919-1.osm
+OSMDATA = /opt/data/uk-070919-1.osm.gz
 #OSMDATA = /tmp/63253506
-#OSMDATA = ~/in/germany-070823.osm
+OSMDATA = /opt/data/germany-070823.osm.gz
 #OSMDATA = vbig.osm
 #OSMDATA = clondon.osm
 #OSMDATA = /opt/data/multi/6324*
 #OSMDATA = test/osm5/srtm.osm
+OSMDATA = rus.osm
 #OSMDATA = --levels=0:24,1:23,2:22,3:21,4:20,5:19,6:18,7:17 /opt/data/planet-070207-gb-london.osm
 
 TIME=/usr/bin/time --format 'Real: %E, %S+%U'
@@ -34,8 +35,8 @@ OSM_GARMIN_MAP = /home/steve/src/osm/applications/utils/export/osmgarminmap
 makemap:
 	rm -f gmapsupp/* mkgmap.log out.log
 	rm -f 63240001.img
-	$(TIME) java -ea -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
-	#java -Dlog.config=l -ea -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
+	#$(TIME) java  -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
+	java -Dlog.config=l -ea -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
 	cp 63240001.img gmapsupp.img
 	imgdecode gmapsupp.img
 
