--- a/branches/filters/Makefile
+++ b/branches/filters/Makefile
@@ -28,9 +28,9 @@ OSMDATA = /opt/data/uk-070815.osm.gz
 #OSMDATA = /opt/data/osmworld/63260003
 #OSMDATA = --gmapsupp ~/tmp/batch/*.osm
 #OSMDATA = /opt/data/uk-071114.osm.gz
-#OSMDATA = /opt/data/uk/63*
+OSMDATA = /opt/data/uk/63*
 #OSMDATA = reg40.osm
-#OSMDATA = --levels='0:24' longline.osm
+OSMDATA = --levels='0:24' longline.osm
 
 
 TIME=/usr/bin/time --format 'Real: %E, %S+%U'
@@ -47,7 +47,7 @@ makemap:
 	$(TIME) java -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
 	#java -Dlog.config=l -ea -cp build/classes uk.me.parabola.mkgmap.main.Main $(OPTS) $(OSMDATA)
 	#cp 63240001.img gmapsupp.img
-	imgdecode gmapsupp.img
+	#imgdecode gmapsupp.img
 
 load:
 	sleep 2
