--- a/branches/bigtre/Makefile
+++ b/branches/bigtre/Makefile
@@ -31,7 +31,7 @@ OSMDATA = localtest/osm5/cricklewood-5.osm
 #OSMDATA = localtest/osm5/reg04.osm
 #OSMDATA = --tdbfile maps/img/*.img
 #OSMDATA = --tdbfile --gmapsupp /opt/data/uk/63*
-OSMDATA = test/samples/test.osm
+OSMDATA = samples/test.osm
 
 
 TIME=/usr/bin/time --format 'Real: %E, %S+%U'
